[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assests/Sprite/select_tab.png" type="Texture" id=1]
[ext_resource path="res://GameComponents/SelectTab.gd" type="Script" id=2]
[ext_resource path="res://Assests/Fonts/NotoSansSC-Regular.otf" type="DynamicFontData" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -103, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 3.605, 10.9283 ),
"update": 0,
"values": [ Vector2( -103, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/out = SubResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -103.0
margin_right = 324.0
margin_bottom = 80.0
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="TextureRect"]
margin_left = 90.0
margin_top = 23.0
margin_right = 394.0
margin_bottom = 63.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 3 )

[connection signal="gui_input" from="TextureRect" to="." method="_on_TextureRect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_TextureRect_mouse_exited"]
